[package]
name = "rust_project"
version = "0.1.0"
# edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.9"
libz-sys = { version = "1.1.0", default-features = false, features = ["libc"] }
wchar = "0.11.0"
rust_ffi = {path = "../rust_ffi"}
c2rust-bitfields = "0.3.0"
lazy_static = "1.4.0"

[build-dependencies]
rust_ffi = {path = "../rust_ffi"}

[lib]
crate-type = ["staticlib"]
name = "archive_rust"
